colocando S maiusculo em secoes e arrumando feedback do busca local do facility

--- a/aprox.bib
+++ b/aprox.bib
@@ -1,3 +1,20 @@
+@article{KH,
+ ISSN = {00251909, 15265501},
+ URL = {http://www.jstor.org/stable/2627368},
+ abstract = {The linear programing algorithms available for optimizing the routing of shipments in multi-plant, multi-destination systems cannot, in the current state of knowledge, be applied directly to the more general problem of determining the number and location of regional warehouses in large-scale distribution networks. This paper outlines a heuristic computer program for locating warehouses and compares it with recently published efforts at solving the problem either by means of simulation or as a variant of linear programing. The heuristic approach outlined in this paper appears to offer significant advantages in the solution of this class of problems in that it (1) provides considerable flexibility in the specification (modeling) of the problem to be solved, (2) can be used to study large-scale problems, that is, complexes with several hundred potential warehouse sites and several thousand shipment destinations, and (3) is economical of computer time. The results obtained in applying the program to small scale problems have been equal to or better than those provided by the alternative methods considered.},
+ author = {Alfred A. Kuehn and Michael J. Hamburger},
+ journal = {Management Science},
+ number = {4},
+ pages = {643--666},
+ publisher = {INFORMS},
+ title = {A Heuristic Program for Locating Warehouses},
+ urldate = {2024-11-10},
+ volume = {9},
+ year = {1963}
+}
+
+
+
 @article{JV,
 author = {Jain, Kamal and Vazirani, Vijay V.},
 title = {Approximation algorithms for metric facility location and k-Median problems using the primal-dual schema and Lagrangian relaxation},
