--- a/facility/arred_linear.tex
+++ b/facility/arred_linear.tex
@@ -1,4 +1,4 @@
-Nessa seção vamos apresentar o algoritmo que faz arredondamento determinístico de uma solução relaxada do programa inteiro que modela o problema localização de instalações. Esse algoritmo foi estudado na seção 4.5 do livro WS2011 e foi desenvolvido pelo Chudak e Shmoys~\cite{Chudak2003}.
+Nessa seção vamos apresentar o algoritmo que faz arredondamento determinístico de uma solução relaxada do programa inteiro que modela o problema localização de instalações. Esse algoritmo foi estudado na Seção 4.5 do livro WS2011 e foi desenvolvido pelo Chudak e Shmoys~\cite{Chudak2003}.
 
 
 Vamos então definir algumas coisas que serão necessárias no nosso algoritmo.
