--- a/k-centros/guloso.tex
+++ b/k-centros/guloso.tex
@@ -1,4 +1,4 @@
-Nessa seção vamos falar sobre o algoritmo guloso para o problema dos $k$-centros. Esse algoritmo foi desenvolvido pelo González~\cite{GONZALEZ1985293} e foi estudado na seção 2.2 do livro WS2011.
+Nessa seção vamos falar sobre o algoritmo guloso para o problema dos $k$-centros. Esse algoritmo foi desenvolvido pelo González~\cite{GONZALEZ1985293} e foi estudado na Seção 2.2 do livro WS2011.
 
 Seja $G \coloneqq (V,E)$ o grafo da instância do problema e $c_e$ o custo de uma aresta $e \in E$.
 Definimos a função $c(u,S)$ que é definida para um vértice $u$ e um conjunto $S$ de vértices  por,
