--- a/main.tex
+++ b/main.tex
@@ -43,7 +43,7 @@ Assim como no localização de instalações, no problema das $k$-medianas temos
 No problema dos $k$-centros não existe diferença entre instalações que podem ser abertas e clientes. Temos cidades e escolheremos $k$ delas para construir instalações.
 Então, temos um grafo $G(V,E)$ completo em que $V$ são cidades e temos um custo $c_{e}$ para associar as cidades que são extremos de uma aresta $e$. Temos também um inteiro $k$ que representa a quantidade de cidades em que uma instalação será aberta. Cada cidade será associada a uma cidade com uma instalação aberta com menor custo de associação entre elas. O objetivo do nosso problema é minimizar o maior custo de associação entre uma cidade qualquer e a cidade a qual ela está associada.
 
-Iremos nos restringir às versões métricas de cada um desses problemas, ou seja, todas as funções de custo estão no espaço métrico. Dentre todas as características de funções no espaço métrico é importante ressaltar que elas satisfazem a desigualdade triangular. A desigualdade triangular consiste em, para $i,j,k \in X$ sendo $X$ o domínio de uma função $f$ qualquer, vale \( f(i,j) \leq f(i,k) + f(k,j).\)
+Iremos nos restringir às versões métricas de cada um desses problemas. As distâncias entre os clientes e as localizações são não direcionadas e satisfazem a desigualdade triangular. A desigualdade triangular se comporta de maneira diferente entre nos problemas devido às diferentes definições das funções de custo. Para uma instância $(G,c)$ do problema dos $k$-centros, dadas cidades $i,j,k \in V(G)$ vale que $ c_{ij} \leq c_{ik} + c_{kj}$. Para uma instância $(F,D,c,.)$ do problema das $k$-medianas ou de localizações de instalações, dados $j,k \in D$ e $i,h \in F$ vale que $c_{ij} \leq c_{ik} + c_{hk} + c_{hk}$.
 
 Diversos métodos podem ser utilizados para aproximar o problema de localização de instalações. Charikar e Guha desenvolveram um algoritmo com razão de aproximação $2.414$ utilizando o método de busca local~\cite{Charikar&Guha'05}.  Esse problema também pode ser modelado como um problema de programação inteira e, por isso, técnicas envolvendo programação linear podem ser aplicadas a ele.  Por exemplo, há algoritmos que fazem o arredondamento de soluções da relaxação linear do programa inteiro para obter uma solução aproximada do problema.  Alguns destes algoritmos atingem boas razões de aproximação, por exemplo, chegando a 1.677~\cite{Byrka&Aardal'10}. Entretanto, a melhor aproximação encontrada utiliza vários métodos, incluindo o conhecido método primal-dual, e garante uma razão de aproximação 1.488~\cite{LI'13}. Essa não é muito distante do melhor que se poderia encontrar, uma vez que Guha e Khuller mostraram que não existe algoritmo para esse problema com razão de aproximação melhor que 1.463~\cite{GUHA1999228}, a menos que $P = \NP$.
 
@@ -53,15 +53,15 @@ Dentre os três problemas apresentados, o problema das $k$-medianas é o que tem
 
 Hsu e Nemhauser~\cite{HSU1979209} mostraram que não existe algoritmo polinomial com razão de aproximação menor que 2 para o problema dos $k$-centros, assumindo que $P\neq\NP$. Neste caso, temos algoritmos de aproximação que apresentam o melhor desempenho possível: utilizando o método do gargalo, Gonzalez~\cite{GONZALEZ1985293} e independentemente Hochbaum e Shmoys~\cite{HochShmoys'85} desenvolveram um algoritmo polinomial com razão de aproximação igual a 2.
 
-A seção 2 trata do problema dos $k$-centros. Começamos com uma prova de que o problema é $\NP$-difícil, assim como uma prova de que não existe algoritmo de aproximação para a versão que não assume função de custo métrica, a menos que $P = \NP$. Além disso, também está descrito o melhor resultado de inaproximabilidade possível que foi desenvolvido por Hsu e Nemhauser~\cite{HSU1979209} e afirma que não existe $(2-\eps)$-aproximação para esse problema. Nela também encontram-se duas 2-aproximações para esse problema: um algoritmo guloso desenvolvido por Gonzalez~\cite{GONZALEZ1985293} e um algoritmo desenvolvido por Hochbaum e Shmoys que utiliza o método do gargalo~\cite{HSBottle}.
+A Seção 2 trata do problema dos $k$-centros. Começamos com uma prova de que o problema é $\NP$-difícil, assim como uma prova de que não existe algoritmo de aproximação para a versão que não assume função de custo métrica, a menos que $P = \NP$. Além disso, também está descrito o melhor resultado de inaproximabilidade possível que foi desenvolvido por Hsu e Nemhauser~\cite{HSU1979209} e afirma que não existe $(2-\eps)$-aproximação para esse problema. Nela também encontram-se duas 2-aproximações para esse problema: um algoritmo guloso desenvolvido por Gonzalez~\cite{GONZALEZ1985293} e um algoritmo desenvolvido por Hochbaum e Shmoys que utiliza o método do gargalo~\cite{HSBottle}.
 
 
-Na seção 3 estão presentes algoritmos de aproximação com diversas abordagens para o problema de localização de instalações, várias dessas estão ligadas à programação linear. Primeiramente, falamos um pouco sobre o problema e mostramos que ele é $\NP$-difícil. Logo após, é descrita uma 3-aproximação que utiliza o método primal-dual desenvolvida por Jain e Vazirani~\cite{JV}. Posteriormente, é apresentado dois algoritmos que fazem arredondamentos de uma solução relaxada de um programa inteiro que modela o problema: uma 4-aproximação que faz arredondamento determinístico e uma 3-aproximação que faz arredondamento probabilístico, ambas desenvolvidas por Chudak e Shmoys~\cite{Chudak2003}. Além dessas, é apresentado um algoritmo guloso que é equivalente a uma 2-aproximação que utiliza o método dual fitting desenvolvida por Jain, Mahdian, Markakis, Saberi e Vazirani~\cite{jain2002greedy}, bem como uma $(1 + \sqrt{2} + \eps)$-aproximação baseada em técnicas de busca local desenvolvida por Gupta e Tangwongsan~\cite{DBLP:journals/corr/abs-0809-2554}. É destacado o resultado de Guha e Khuller~\cite{GUHA1999228}, que demonstra a inexistência de uma 1.46-aproximação para esse problema, a menos que $P=\NP$.
+Na Seção 3 estão presentes algoritmos de aproximação com diversas abordagens para o problema de localização de instalações, várias dessas estão ligadas à programação linear. Primeiramente, falamos um pouco sobre o problema e mostramos que ele é $\NP$-difícil. Logo após, é descrita uma 3-aproximação que utiliza o método primal-dual desenvolvida por Jain e Vazirani~\cite{JV}. Posteriormente, são apresentados dois algoritmos que fazem arredondamentos de uma solução relaxada de um programa inteiro que modela o problema: uma 4-aproximação que faz arredondamento determinístico e uma 3-aproximação que faz arredondamento probabilístico, ambas desenvolvidas por Chudak e Shmoys~\cite{Chudak2003}. Além dessas, é apresentado um algoritmo guloso que é equivalente a uma 2-aproximação que utiliza o método dual fitting desenvolvida por Jain, Mahdian, Markakis, Saberi e Vazirani~\cite{jain2002greedy}, bem como uma $(1 + \sqrt{2} + \eps)$-aproximação baseada em técnicas de busca local desenvolvida por Gupta e Tangwongsan~\cite{DBLP:journals/corr/abs-0809-2554}. É destacado o resultado de Guha e Khuller~\cite{GUHA1999228}, que demonstra a inexistência de uma 1.46-aproximação para esse problema, a menos que $P=\NP$.
 
-Na seção 4 destacamos o problema das $k$-medianas. Assim, como no problema localização de instalações começamos a seção falando um pouco sobre o problema e mostrando que ele é $NP$-difícil. Após isso, descrevemos dois algoritmos que utilizam o método de busca local, nos algoritmos de busca local para o problema das $k$-medianas começamos com uma solução viável e realizamos operações que trocam instalações abertas por instalações fechadas. No primeiro deles, são permitidas apenas trocas únicas, ou seja, uma instalação aberta é fechada e uma instalação fechada é aberta, com isso é possível atingir uma 5-aproximação. No segundo, o algoritmo recebe um número $p$ e são permitidas trocas de até $p$ instalações simultaneamente. Esse algoritmo é uma $(3 + \frac{2}{p})$-aproximação. É possível fazer o termo $\frac{2}{p}$ ser tão pequeno quanto quisermos e, com isso, conseguimos uma $(3 + \eps)$-aproximação, mas isso reflete no tempo de execução do algoritmo. Ambos os algoritmos foram desenvolvidos por Arya, Garg, Khandekar, Meyerson, Munagala e Pandit~\cite{AryaLocal}. Posteriormente, falamos sobre um algoritmo primal-dual que utiliza a técnica de Relaxação Lagrangeana. Esta é uma técnica sofisticada que permite ignorar restrições complicadas, descontando no valor objetivo para soluções que não respeitam as restrições ignoradas. Além disso, esse algoritmo utiliza um arredondamento probabilístico para transformar a solução relaxada na solução do problema original e mostramos a desaleatorização desse algoritmo. Esse algoritmo foi desenvolvido por Jain e Vazirani~\cite{JV} e é uma 4-aproximação. Por fim, apresentamos o algoritmo descrito no artigo ``Approximating k-Median via Pseudo-Approximation'' do Li e Svensson~\cite{li2012}. Esse algoritmo foi fundamental para a descoberta dos algoritmos de aproximação mais recentes encontrados, uma vez que ele conseguiu não se limitar ao \emph{integrality gap}, permitindo encontrar resultados melhores para um problema que estava a uma década sem novas descobertas. Em resumo, ele consegue abrir mais do que $k$ instalações e transformar isso em uma solução viável sem perder muito no valor da solução. Esse algoritmo é uma $(1 + \sqrt{3} + \eps)$-aproximação.
+Na Seção 4 destacamos o problema das $k$-medianas. Assim, como no problema de localização de instalações começamos a seção falando um pouco sobre o problema e mostrando que ele é $\NP$-difícil. Após isso, descrevemos dois algoritmos que utilizam o método de busca local. Nos algoritmos de busca local para o problema das $k$-medianas começamos com uma solução viável e realizamos operações que trocam instalações abertas por instalações fechadas. No primeiro deles, são permitidas apenas trocas unitárias, ou seja, uma instalação aberta é fechada e uma instalação fechada é aberta, e com isso é possível atingir uma 5-aproximação. No segundo, o algoritmo é parametrizado em um número $p$ e são permitidas trocas de até $p$ instalações simultaneamente. Esse algoritmo é uma $(3 + \frac{2}{p})$-aproximação. É possível fazer o termo $\frac{2}{p}$ ser tão pequeno quanto quisermos e, com isso, conseguimos uma $(3 + \eps)$-aproximação, mas isso reflete no tempo de execução do algoritmo. Ambos os algoritmos foram desenvolvidos por Arya, Garg, Khandekar, Meyerson, Munagala e Pandit~\cite{AryaLocal}. Posteriormente, falamos sobre um algoritmo primal-dual que utiliza a técnica de relaxação Lagrangeana. Esta é uma técnica sofisticada que permite substituir restrições por uma penalidade na função objetivo para soluções que não respeitam tais restrições. Além disso, esse algoritmo utiliza um arredondamento probabilístico para transformar a solução relaxada na solução do problema original e mostramos a desaleatorização desse algoritmo. Esse algoritmo foi desenvolvido por Jain e Vazirani~\cite{JV} e é uma 4-aproximação para o problema das $k$-medianas. Por fim, apresentamos o algoritmo descrito no artigo ``Approximating $k$-Median via Pseudo-Approximation'' de Li e Svensson~\cite{li2012}. Esse algoritmo foi fundamental para a descoberta dos algoritmos de aproximação mais recentes encontrados, uma vez que ele conseguiu não se limitar ao \emph{gap} de integralidade, permitindo encontrar resultados melhores para um problema que estava há uma década sem novas descobertas. Em resumo, eles provisoriamente permitem abrir mais do que $k$ instalações e transformam isso em uma solução viável sem perder muito no valor da solução. Esse algoritmo é uma $(1 + \sqrt{3} + \eps)$-aproximação.
 É destacado o resultado de Jain, Mahdian, Markakis, Saberi e Vazirani~\cite{jain2002greedy}, que demonstra a inexistência de uma 1.736-aproximação para esse problema, a menos que $P=\NP$.
 
-Com exceção do algoritmo de busca local que troca várias instalações simultaneamente e o algoritmo que utiliza pseudo-aproximação ambos para o problema das $k$-medianas, todos os outros algoritmos foram estudados pelos livros ``\emph{Approximation Algorithms}'' do Vazirani (V2001)~\cite{books/Vazirani} e ``\emph{The Design of Approximation Algorithms}'' do David Williamson e do David Shmoys (WS2011)~\cite{books/WS}.
+Com exceção do algoritmo de busca local que troca várias instalações simultaneamente e o algoritmo que utiliza pseudo-aproximação, ambos para o problema das $k$-medianas, todos os outros algoritmos foram estudados pelos livros ``\emph{Approximation Algorithms}'' de Vazirani (V2001)~\cite{books/Vazirani} e ``\emph{The Design of Approximation Algorithms}'' de David Williamson e David Shmoys (WS2011)~\cite{books/WS}.
 % \newpage
 \section{$k$-Centros}
     \input{k-centros/intro.tex}
