--- a/packages.sty
+++ b/packages.sty
@@ -32,7 +32,9 @@
 \renewcommand{\algorithmicwhile}{\textbf{Enquanto}}
 \renewcommand{\algorithmicfunction}{\textbf{Algoritmo}}
 \renewcommand{\algorithmicreturn}{\textbf{Devolva}}
-
+\renewcommand{\algorithmicrepeat}{\textbf{repita}}
+\renewcommand{\algorithmicuntil}{\textbf{até que}}
+\newcommand{\custo}{\ensuremath{\mathrm{custo}}}
 \newcommand{\opt}{\ensuremath{\mathrm{opt}}}
 \newcommand{\OPT}{\ensuremath{\mathrm{opt}}}
 \newcommand{\Opt}{\ensuremath{\mathrm{opt}}}
